Added new files with Karan

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 
         <ul>
-            <li><a href="#">+ CONTACT ME</a></li>
-            <li><a href="#">+ ABOUT ME</a></li>
-            <li><a href="#">+ PROJECTS</a></li>
+            <li><a href="#">+ Contact Me</a></li>
+            <li><a href="#">+ About Me</a></li>
+            <li><a href="#">+ Projects</a></li>
         </ul>
     </nav>
 
@@ -51,29 +51,85 @@
     </section>
     <!-- End Of Loader Section -->
 
-    <!-- Test Section -->
-    <section id="contact-me" class="test">
+    <!-- Contact Section -->
+    <section id="contact-me" class="contact-section">
         <h1>Contact Me</h1>
     </section>
-    <!-- End of Test Section -->
+    <!-- End of Contact Section -->
 
-    <!-- Test Section -->
-    <section id="landing" class="test">
+    <!-- Landing Section -->
+    <section id="landing" class="landing-section">
         <h1>Landing</h1>
     </section>
-    <!-- End of Test Section -->
-    
-    <!-- Test Section -->
-    <section id="projects" class="test">
-        <h1>Projects</h1>
+    <!-- End of Landing Section -->
+
+    <!--  Stars Section -->
+    <section class="stars-section">
+        <div class="stars"></div>
+        <div class="stars"></div>
+        <div class="stars"></div>
     </section>
-    <!-- End of Test Section -->
+    <!-- End of Stars Section -->
+
+    <!--  Satellites Section -->
+    <section class="satellites-section">
+        <div class="satellites"></div>
+        <div class="satellites"></div>
+        <div class="satellites"></div>
+    </section>
+    <!-- End of Satellites Section -->
+    
+    <!-- Projects Section -->
+    <section id="projects" class="projects-section">
+        <div class="project">
+            <div class="project-text-container">
+                <h3 class="project-title">Plásticos Prolosa - Website Overhaul</h3>
+                <p class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, ipsa!</p>
+            </div>
+            <div class="launch-project-button visually-hidden">
+                <p class="button-text">Launch Site</p>
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-text-container">
+                <h3 class="project-title">Langara College's Website Redesign</h3>
+                <p class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, ipsa!</p>
+            </div>
+            <div class="launch-project-button visually-hidden">
+                <p class="button-text">Launch Site</p>
+            </div>
+        </div>
+        <h2>Projects</h2>
+    </section>
+    <!-- End of Projects Section -->
+
+    <!--  Earth Curvature Section -->
+    <section class="earth-curvature-section">
+        <div class="earth"></div>
+    </section>
+    <!-- End of Earth Curvature Section -->
 
     <!-- Test Section -->
     <section id="max-q" class="test">
         <h1>Max Q</h1>
     </section>
     <!-- End of Test Section -->
+
+    <!--  Planes Section -->
+    <section class="planes-section">
+        <div class="plane"></div>
+        <div class="plane"></div>
+        <div class="plane"></div>
+    </section>
+    <!-- End of Clouds Section -->
+
+    <!--  Clouds Section -->
+    <section class="clouds-section">
+        <div class="cloud"></div>
+        <div class="cloud"></div>
+        <div class="cloud"></div>
+    </section>
+    <!-- End of Clouds Section -->
 
     <!-- What I Do Section -->
     <section class="what-i-do-section">
