Addded the thankyou.html file after submitting the form

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 
 
           <form action="https://formsubmit.co/pablo@palitriestodesign.com" method="POST">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="hidden" name="_next" value="https://">
             <input type="email" name="email" placeholder="Your Email Address" required>
+            <input type="hidden" name="_next" value="https://wwww.palitriestodesign.com/pages/thankyou.html">
+            <input type="text" name="message" placeholder="Write your message here..." required>
             <button type="submit">Send</button>
        </form>
           <h3>Contact Me</h3>
@@ -271,10 +271,10 @@
     <!-- Starship -->
     <div class="starship-system" >
         <div class="starship-container">
-            <img class="starship " src="assets/starship/sprite.png" alt="" draggable="false">
+            <img class="starship rotating" src="assets/starship/sprite.png" alt="" draggable="false">
         </div>
         <div class="booster-container">
-            <img class="booster " src="assets/starship/boostersprite_1.png" alt="" draggable="false">
+            <img class="booster rotating" src="assets/starship/boostersprite_1.png" alt="" draggable="false">
         </div>
     </div>
     <!-- End Of Starship -->
