Improved Progress Bar

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="contact-me-wrapper">
                 <div class="pali-tries-to-design">
                     <h1>Pali</h1>
-                    <h1>Triesto</h1>
+                    <h1>Tries to</h1>
                     <h1>design</h1>
                 </div>
                 
@@ -97,7 +97,8 @@
 
     <!-- Landing Section -->
     <section id="landing" class="landing-section">
-        <h1>Landing</h1>
+        <div class="landing-line ">
+        </div>
     </section>
     <!-- End of Landing Section -->
 
@@ -277,6 +278,7 @@
     <!-- Lift Off Section -->
     <section id="lift-off" class="lift-off-section">
         <div class="scroll-up-section">
+            <i class="fa-solid fa-chevron-up"></i>
             <p>Scroll up to explore...</p>
         </div>
         <div class="launch-pad-container">
@@ -291,7 +293,7 @@
             <img class="starship " src="assets/starship/sprite.png" alt="" draggable="false">
         </div>
         <div class="booster-container">
-            <img class="booster " src="assets/starship/boostersprite_1.png" alt="" draggable="false">
+            <img class="booster " src="assets/starship/booster_sprite.png" alt="" draggable="false">
         </div>
     </div>
     <!-- End Of Starship -->
@@ -300,7 +302,7 @@
     <div class="progress-bar-container">
         <div class="altitude-container">
             <div class="element">
-                <i class="fa-solid fa-arrow-up"></i>
+                <i class="fa-solid fa-ruler-vertical"></i>
             </div>
             <div class="altitude">
                 <p class="altitude-title">Altitude</p>
@@ -310,23 +312,39 @@
 
         <div class="stage-container">
             <div class="stage-inner">
-                <div class="element"></div>
+                <div class="element">
+                    <i class="fa-solid fa-fire"></i>
+                </div>
                 <div class="active-stage-container">
-                    <p class="stage-title">Lift Off</p>
+                    <div class="prev-next-stage">
+                        <i class="fa-solid fa-chevron-left"></i>
+                        <p class="stage-title">Lift Off</p>
+                        <i class="fa-solid fa-chevron-right"></i>
+                    </div>
                     <div class="progress">
                         <div class="progress-inner"></div>
                     </div>
                 </div>
             </div>
             <div class="stages">
-                <ul class="stages-list">
+                <a href="https://linkedin.com/in/palimv" target="_blank">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a href="https://github.com/PaliTriesToDesign" target="_blank">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+                <a href="https://twitter.com/PT2DS" target="_blank">
+                    <i class="fa-brands fa-twitter"></i>
+                    <!-- X icon not working -->
+                </a>
+                <!-- <ul class="stages-list">
                     <li><a href="#lift-off">Lift Off!</a></li>
                     <li><a href="#about-me">About Me</a></li>
-                    <!-- <li><a href="#max-q">Max Q</a></li> -->
+                    <li><a href="#max-q">Max Q</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#landing">Landing</a></li>
                     <li><a href="#contact-me">Contact Me</a></li>
-                </ul>
+                </ul> -->
             </div>
         </div>
 
@@ -334,7 +352,9 @@
             <div id="soundIcon" class="element">
                 <i class="fa-solid fa-volume-high"></i>
             </div>
-            <div class="element"></div>
+            <div class="element">
+                <i class="fa-solid fa-arrow-up"></i>
+            </div>
         </div>
     </div>
     <!-- End Of Progress Bar -->
