Added opacity to Mute Icon. Adjusted Contact Me section alignment

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- End Of Loader Section -->
 
     <!-- Contact Section -->
-    <section id="contact-me" class="contact-section">
+    <section id="contactMe" class="contact-section">
         
         <div class="section-wrapper">
             <div class="contact-me-wrapper">
@@ -353,7 +353,7 @@
                 <i class="fa-solid fa-volume-high"></i>
             </div>
             <div class="element">
-                <i class="fa-solid fa-arrow-up"></i>
+                <a href="#contactMe"><i class="fa-solid fa-arrow-up"></i></a>
             </div>
         </div>
     </div>
