Added project pages

--- a/index.html
+++ b/index.html
@@ -27,15 +27,10 @@
 
 
         <ul>
-            <li><a href="#">+ Contact Me</a></li>
-            <li><a href="#">+ About Me</a></li>
+            <li><a href="pages/about-me.html">+ About Me</a></li>
             <li><a href="pages/projects.html">+ Projects</a></li>
         </ul>
     </nav>
-
-    <div class="follower"></div>
-
-    
 
     <!-- Loader Section -->
     <section class="loader-section visually-hidden">
@@ -81,7 +76,7 @@
                             <input type="email" id="email" name="email" placeholder="Your Email Address" required>
                         </div>
                     </div>
-                    <input type="hidden" name="_next" value="https://palitriestodesign.com/pages/thankyou.html">
+                    <input type="hidden" name="_next" value="https://palitriestodesign.com/pages/thank-you.html">
                     <div class="input-group">
                         <label for="message">Message:</label>
                         <textarea type="text" id="message" name="message" placeholder="Write your message here..." required rows="5"></textarea>
@@ -127,6 +122,48 @@
         <div class="section-wrapper">
             <div class="section-content-wrapper">
                 <!-- Project -->
+                <div id="project" class="project">
+                    <div id="previewImages" class="project-preview-images-wrapper">
+                        <div class="preview-image preview-image-1"></div>
+                        <div class="preview-image preview-image-2"></div>
+                        <div class="preview-image preview-image-3"></div>
+                    </div>
+                    <div class="project-text-container">
+                        <h3 class="project-title">
+                            <a class="project-link" href="/pages/webb-telescope.html">
+                            James Webb Telescope: UI Redesign
+                            </a>
+                        </h3>
+                        <p class="project-description">This project is still ongoing.</p>
+                    </div>
+                    <div class="launch-project-button">
+                        <p class="button-text"><a href="https://webbtelescope.org/home" target="_blank" rel="noopener no-referrer">Launch Site</a></p>
+                    </div>
+                </div>
+                <!-- End of Project -->
+
+                <!-- Project -->
+                <div id="project" class="project">
+                    <div id="previewImages" class="project-preview-images-wrapper">
+                        <div class="preview-image preview-image-1"></div>
+                        <div class="preview-image preview-image-2"></div>
+                        <div class="preview-image preview-image-3"></div>
+                    </div>
+                    <div class="project-text-container">
+                        <h3 class="project-title">
+                            <a class="project-link" href="/pages/opeth.html">
+                            Opeth: UI Redesign
+                            </a>
+                        </h3>
+                        <p class="project-description">This project is still ongoing.</p>
+                    </div>
+                    <div class="launch-project-button">
+                        <p class="button-text"><a href="https://www.opeth.com/ target="_blank" rel="noopener no-referrer">Launch Site</a></p>
+                    </div>
+                </div>
+                <!-- End of Project -->
+
+                <!-- Project -->
                 <div class="project">
                     <div class="project-preview-images-wrapper previe">
                         <div class="preview-image preview-image-1"></div>
@@ -159,7 +196,7 @@
                                 Plásticos Prolosa - Website Overhaul
                                 </a>
                             </h3>
-                            <p class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, ipsa!</p>
+                            <p class="project-description">This project is still ongoing.</p>
                         </div>
                         <div class="launch-project-button">
                             <p class="button-text"><a href="https://plasticosprolosa.com/" target="_blank" rel="noopener no-referrer">Launch Site</a></p>
@@ -180,7 +217,7 @@
                                 Langara College's Website Redesign
                                 </a>
                             </h3>
-                            <p class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, ipsa!</p>
+                            <p class="project-description">This project is still ongoing.</p>
                         </div>
                         <div class="launch-project-button">
                             <p class="button-text"><a href="https://langara-app.ca/" target="_blank" rel="noopener no-referrer">Launch Site</a></p>
@@ -260,7 +297,7 @@
                 <p class="section-name active">Professional Version</p>
                 <p class="section-name">Honest Version</p>
             </div> -->
-            <h3 class="section-title">About Me</h3>
+            <h3 class="section-title"><a href="/pages/about-me.html">About Me</a></h3>
         </div>
 
     </section>
@@ -269,9 +306,9 @@
     <!--  Birds Section -->
     <!-- Create this section after Dec 6th -->
     <section class="birds-section">
-            <div class="bird"></div>
-            <div class="bird"></div>
-            <div class="bird"></div>
+            <div class="birdz"></div>
+            <div class="birdz"></div>
+            <div class="birdz"></div>
     </section>
     <!-- End of Birds Section -->
 
@@ -288,12 +325,12 @@
     <!-- End Of Lift Off Section -->
 
     <!-- Starship -->
-    <div class="starship-system " >
+    <div class="starship-system" >
         <div class="starship-container">
-            <img class="starship " src="assets/starship/sprite.png" alt="" draggable="false">
+            <img class="starship" src="assets/starship/sprite.png" alt="" draggable="false">
         </div>
         <div class="booster-container">
-            <img class="booster " src="assets/starship/booster_sprite.png" alt="" draggable="false">
+            <img class="booster" src="assets/starship/booster_sprite.png" alt="" draggable="false">
         </div>
     </div>
     <!-- End Of Starship -->
