Added the starship's rotation trigger. Added Project Preview Images

--- a/pages/webb-telescope.html
+++ b/pages/webb-telescope.html
@@ -15,7 +15,7 @@
 <body class="project-body">
     <!-- Room Tone -->
     <audio id="roomTone" loop autoplay>
-        <source src="assets/soundFx/spaceVoidLoop.wav" type="audio/wav">
+        <source src="../assets/soundFx/spaceVoidLoop.wav" type="audio/wav">
         Audio
     </audio>
     <!-- End of Room Tone -->
@@ -44,6 +44,10 @@
 
     <div class="project-intro">
         <h1 id="projectTitle">Webb Telescope: UI Redesign</h1>
+    </div>
+    <div class="project-final-results">
+        <div class="reult-wrapper"><img src="../assets/projectImages/webbTelescope/finalResult1.png" alt=""></div>
+        <div class="result-wrapper"><img src="../assets/projectImages/webbTelescope/finalResult2.png" alt=""></div>
     </div>
 
     <main class="main-section">
@@ -115,7 +119,17 @@
                 </div>
             </div>
         </div>
+
+        <!-- Lift Off Section -->
+        <section id="lift-off" class="lift-off-section">
+            <div class="launch-pad-container">
+                <img src="../assets/starship/launchPad.png" alt="Launch Pad">
+            </div>
+        </section>
+        <!-- End Of Lift Off Section -->
     </main>
+
+    
 
     <!-- Progress Bar -->
     <div class="progress-bar-container">
