--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <!-- Landing Section -->
     <section id="landing" class="landing-section">
-        <div class="landing-line ">
+        <div id="landingPad" class="landing-line">
         </div>
     </section>
     <!-- End of Landing Section -->
@@ -325,12 +325,12 @@
     <!-- End Of Lift Off Section -->
 
     <!-- Starship -->
-    <div class="starship-system" >
+    <div id="starshipSystem" class="starship-system" >
         <div class="starship-container">
-            <img class="starship" src="assets/starship/sprite.png" alt="" draggable="false">
+            <img id="starship" class="starship" src="assets/starship/sprite.png" alt="" draggable="false">
         </div>
         <div class="booster-container">
-            <img class="booster" src="assets/starship/booster_sprite.png" alt="" draggable="false">
+            <img id="booster" class="booster" src="assets/starship/booster_sprite.png" alt="" draggable="false">
         </div>
     </div>
     <!-- End Of Starship -->
