--- a/pages/webb-telescope.html
+++ b/pages/webb-telescope.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pali's Portfolio - Webb Telescope</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="icon" type="image/x-icon" href="/assets/branding/LogoFill.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap" rel="stylesheet">
@@ -30,7 +31,9 @@
     <nav class="navigation-bar">
         <div class="personal-logo">
             <a href="../index.html">
-                <div class="element"></div>
+                <div class="logo-wrapper">
+                    <img class="logo floating" src="../assets/branding/LogoFill.svg" alt="Logo">
+                </div>
             </a>
         </div>
 
@@ -66,7 +69,7 @@
                 </div>
                 <div class="overview-wrapper">
                     <h3>Role</h3>
-                    <p>Product Design (UI/UX)</p>
+                    <p>UI/UX Designer</p>
                 </div>
                 <div class="overview-wrapper">
                     <h3>Timeline</h3>
