--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pali's Portfolio - Home</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="/assets/branding/LogoFill.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap" rel="stylesheet">
@@ -21,14 +22,16 @@
     <nav class="navigation-bar">
         <div class="personal-logo">
             <a href="index.html">
-                <div class="element"></div>
+                <div class="logo-wrapper">
+                    <img class="logo floating" src="../assets/branding/LogoFill.svg" alt="Logo">
+                </div>
             </a>
         </div>
 
 
         <ul>
             <li><a href="pages/about-me.html">+ About Me</a></li>
-            <li><a href="pages/projects.html">+ Projects</a></li>
+            <li><a href="#">+ Projects</a></li>
         </ul>
     </nav>
 
@@ -314,9 +317,9 @@
 
     <!-- Lift Off Section -->
     <section id="lift-off" class="lift-off-section">
-        <div class="scroll-up-section">
+        <div id="scrollUp" class="scroll-up-section" data-scroll-up>
             <i class="fa-solid fa-chevron-up"></i>
-            <p>Scroll up to explore...</p>
+            <!-- <p>Scroll up to explore...</p> -->
         </div>
         <div class="launch-pad-container">
             <img src="/assets/starship/launchPad.png" alt="Launch Pad">
