--- a/pages/opeth.html
+++ b/pages/opeth.html
@@ -21,15 +21,16 @@
     <nav class="navigation-bar">
         <div class="personal-logo">
             <a href="../index.html">
-                <div class="element"></div>
+                <div class="logo-wrapper">
+                    <img class="logo floating" src="../assets/branding/LogoFill.svg" alt="Logo">
+                </div>
             </a>
         </div>
 
 
         <ul>
-            <li><a href="#">+ Contact Me</a></li>
-            <li><a href="#">+ About Me</a></li>
-            <li><a href="projects.html">+ Projects</a></li>
+            <li><a href="about-me.html">+ About Me</a></li>
+            <li><a href="#">+ Projects</a></li>
         </ul>
     </nav>
 
