Added emailjs form. Added Stage Separation animation!

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    
     <script type="module" src="/js/index.js"></script>
     <script type="module" src="js/functions.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
 <body class="home">
     <audio id="roomTone" loop autoplay>
@@ -90,7 +91,7 @@
                     <h1>design</h1>
                 </div>
                 
-                <form id="contactMe" action="https://formsubmit.co/pablo@palitriestodesign.com" method="POST">
+                <form id="contactMeForm">
                     <div class="input-wrapper">
                         <div class="input-group">
                             <label for="username">Username:</label>
