Fixed bug of starship separating when scrolling down on window load. Rocket Launching sound only plays once. Added Stage Separation sound fx, need to make it play only once. Changed room tone sound fx

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
 <body class="home">
-    <audio id="roomTone" loop autoplay>
-        <source src="assets/soundFx/spaceVoidLoop.wav" type="audio/wav">
+    <audio class="audio" id="roomTone" loop autoplay>
+        <source src="assets/soundFx/floatingInSpaceLoop.wav" type="audio/wav">
         Audio
     </audio>
-    <audio id="bleepSound" src="/assets/soundFx/gameBleep.wav"></audio>
-    <audio id="wrongActionSound" src="/assets/soundFx/wrongAction2.wav"></audio>
-    <audio id="rocketLaunchSound" src="/assets/soundFx/rocketLaunch.wav" loop autoplay></audio>
+    <audio class="bleep-audio" id="bleepSound" src="/assets/soundFx/gameBleep.wav"></audio>
+    <audio class="audio" id="wrongActionSound" src="/assets/soundFx/wrongAction.wav"></audio>
+    <audio class="audio" id="rocketLaunchSound" src="/assets/soundFx/rocketLaunch.wav"></audio>
+    <audio class="audio" id="secondStageSound" src="/assets/soundFx/secondStageExplosion.wav"></audio>
 
     <nav class="navigation-bar">
         <div class="personal-logo">
