UX: Changed Room Tone

--- a/index.html
+++ b/index.html
@@ -400,10 +400,11 @@
                 <a href="https://github.com/PaliTriesToDesign" target="_blank">
                     <i class="fa-brands fa-github"></i>
                 </a>
-                <a href="https://twitter.com/PT2DS" target="_blank">
+                
+                <!-- <a href="https://twitter.com/PT2DS" target="_blank">
                     <i class="fa-brands fa-twitter"></i>
-                    <!-- X icon not working -->
-                </a>
+                </a> -->
+
                 <!-- <ul class="stages-list">
                     <li><a href="#lift-off">Lift Off!</a></li>
                     <li><a href="#about-me">About Me</a></li>
